--- a/manual/datafile.tex
+++ b/manual/datafile.tex
@@ -10,7 +10,7 @@ instance and provide a filename as the parameter, e.g.
 \verb|datafile("testdata")|. The parsing of the file, namely the
 columns of the table, is done by matching regular expressions. They
 can be modified, as they are additional named arguments of the
-constructor, which are:
+constructor, namely:
 
 \medskip
 \begin{tabularx}{\linewidth}{ll>{\raggedright\arraybackslash}X}
@@ -19,19 +19,17 @@ argument name&default&description\\
 \texttt{commentpattern}&\texttt{re.compile(r"(\#+|!+|\%+)\textbackslash s*")}&start a comment line\\
 \texttt{stringpattern}&\texttt{re.compile(r"\textbackslash"(.*?)\textbackslash"(\textbackslash s+|\$)}&a string column\\
 \texttt{columnpattern}&\texttt{re.compile(r"(.*?)(\textbackslash s+|\$)}&any other column\\
-\texttt{parser}&\texttt{mathtree.parser()}&see section~\ref{datafile:cumulate}\\
 \end{tabularx}
 \medskip
 
-The processing of the input file is done be reading line by line from
-the file and first strip leading and tailing whitespaces of the lines.
-Then a check is performed, whether the line matches the comment
-pattern or not. If it does match, this rest of the line is analysed
-like a table line when no data was read before (otherwise it is just
-thrown away). The result is interpreted as column titles. As the
-titles are sequentially overwritten by another comment line previous
-to the data, finally the last non-empty comment line determines the
-column titles.
+The processing of the input file is done be reading the file line by
+line and first strip leading and tailing whitespaces of the line. Then
+a check is performed, whether the line matches the comment pattern or
+not. If it does match, this rest of the line is analysed like a table
+line when no data was read before (otherwise it is just thrown away).
+The result is interpreted as column titles. As the titles are
+sequentially overwritten by another comment line previous to the data,
+finally the last non-empty comment line determines the column titles.
 
 Thus we have still to explain, how the reading of data lines works. We
 create a list of entries for each column out of a given line. A line
@@ -46,29 +44,14 @@ The string pattern allows for columns to contain whitespaces. It
 matches a string whenever it starts with a quote (\verb|"|) and then
 tries to find the end of that very string by another quote immediately
 followed by a whitespace or the end of the line. Hence a quote
-within the string is just ignored and no kind of escaping is needed.
-The only disadvantage is, that you cannot describe a string which
-contains a quote and a whitespace consecutively. While, on the
-other hand, this implementation usually just does exactly what the
-user wants without needing any kind of special escaping, it is
-considered to be the best solution. Additionally we want to mention,
-that an \TeX-expression with a quote immediately follod by a
-whitespace is a really rare construct. While strings are expected to
-get used in \TeX-expressions later on, the syntactical limitation
-should normally not be relevant.
+within a string is just ignored and no kind of escaping is needed. The
+only disadvantage is, that you cannot describe a string which
+contains a quote and a whitespace consecutively. However, you can
+always replace the string pattern and replace the quote character.
 
-Please note that you can easily reconfigure the patterns. For example
-you may change the characters used between the columns.
-
-Finally, the \verb|datafile| just provides two internal variables,
-where the data is stored. In \verb|titles| holds a list of the column
-titles. It is prefixed by the entry \verb|None| indicating an empty
-title for the column of the line number. \verb|data| contains a list
-for the lines, where each line is a list of the entries of that very
-line. It is prefixed with an integer entry for the line number
-(starting at 1). The number of columns at each line is the same and it
-is also equal to the length of the titles list. In order to fullfill
-this condition, entries with the value \verb|None| might be inserted.
+Finally the number of columns is fixed to the maximal number contained
+in the file and lines with less entries get filled with \verb|None|.
+Also the titles list is cutted to this maximal number of columns.
 
 \section{Accessing columns}
 
@@ -76,9 +59,12 @@ The method \verb|getcolumnno| takes a parameter as the column
 description. If it matches exactly one entry in the titles list, the
 number of this element is returned. Otherwise the parameter should be
 an integer and it is checked, if this integer is a valid column index.
-It still might be negative (counting the columns from the end).
-When an error occurres, the exception \verb|ColumnError| is raised.
-Examples are \verb|getcolumnno(1)| or \verb|getcolumnno("title")|.
+Like for other python indices a column number might be negative
+counting the columns from the end. When an error occurres, the
+exception \verb|ColumnError| is raised. Please note, that the datafile
+inserts a first column having the index 0, which contains the line
+number (starting at 1 and counting only data lines). Examples are
+\verb|getcolumnno(1)| or \verb|getcolumnno("title")|.
 
 The method \verb|getcolumn| takes the same argument as the method
 \verb|getcolumnno| described above, but it returns a list with the
@@ -86,27 +72,37 @@ values of this very column.
 
 \section{Mathematics on columns}
 
-By the method \verb|addcolumn| a new column is appended to the data.
-The method takes an string as the first parameter which is interpreted
-as an expression. Then the expression contains an equal sign
-(\verb|=|), everything left to the last equal sign will become the
-title of the new column. When no equal sign is found, the title will
-be set to \verb|None|. The part right to the last equal sign is
-interpreted as an mathematical expression. A list of functions and
-operators can be found in appendix~\ref{mathtree}. The expression
-might contain variable names. These names can either directly be a
-column title, but this is only allowed for column titles which are
-valid variable names (e.g. they should start with a letter and contain
-only letters, digits and the underscore). Alternatively, temporary
-names for columns can be given by additional named parameters of the
-\verb|addcolumn| method. The named parameters are stronger compared to
-column titles in the determination of the appropriate column. The name
-of a named parameter will be the variable name in the expression. The
-value of a named parameter should be a valid parameter of the
-\verb|getcolumnno| method. The data referenced by variables in the
-expression need to be floats, otherwise the result for that data line
-will be \verb|None|. Examples are \verb|addcolumn("av=(min+max)/2")|
-or \verb|addcolumn("av=(a+b)/2", a=1, b="max")|.
+By the method \verb|addcolumn| a new column is appended. The method
+takes a string as the first parameter which is interpreted as an
+expression. When the expression contains an equal sign (\verb|=|),
+everything left to the last equal sign will become the title of the
+new column. If no equal sign is found, the title will be set to
+\verb|None|. The part right to the last equal sign is interpreted as
+an mathematical expression. A list of functions and operators can be
+found in appendix~\ref{mathtree}. The expression might contain
+variable names. The interpretation of this names is done in the
+following way:
+\begin{itemize}
+\item The names can be a column title, but this is only allowed for
+column titles which are valid variable names (e.g. they should start
+with a letter and contain only letters, digits and the underscore).
+\item A temporary name might be used, which is given by additional
+named parameters of the \verb|addcolumn| method. The named parameters
+are stronger compared to column titles of the previous point in the
+determination of the appropriate column. The name of a named parameter
+will be the variable name in the expression. The value of a named
+parameter should be a valid parameter of the \verb|getcolumnno|
+method.
+\item A variable name can start with the dollar symbol (\verb|$|) and
+the following integer number will directly refer to a column number.
+To implement this third possibility, the mathematical expression
+parser is extended within the datafile module (cf. section
+\ref{datafile:cumulate}).
+\end{itemize}
+The data referenced by variables in the expression need to be
+floats, otherwise the result for that data line will be \verb|None|.
+Examples are \verb|addcolumn("av=(min+max)/2")|,
+\verb|addcolumn("av=(a+b+$3)/2", a=1, b="max")|.
 
 \section{Dirty tricks for mathematics on columns}
 \label{datafile:cumulate}
@@ -114,13 +110,13 @@ or \verb|addcolumn("av=(a+b)/2", a=1, b="max")|.
 I want to present a solution for cumulating data in a new column.
 As told in the title of this section, it is considered to be a dirty
 trick, because it relies on side effects in the calculation of the new
-column, namely it sums the result up in a hidden variable. In some
-way, it's exactly wanted, on the other hand, it is nothing I would
-ever consider to do officially (don't expect the following lines to
-become part of \PyX{} in the future). On the other hand, nothing could
-be told about using this tick and I don't expect that this feature
-will break in future versions. Somehow, this is needed and the
-possibility to implement something like this has to stay.
+column, namely it sums up the result in a hidden variable. While
+that is wanted, it is nothing I would ever consider to do officially
+(don't expect the following lines to become part of \PyX{} in the
+future). On the other hand, nothing could be told about using this
+tick and I don't expect that this feature will break in future
+versions. Somehow, it is needed and the possibility to implement this
+trick has to stay.
 
 What we want to do is to add another function within the allowed
 expression syntax for doing mathematics on columns. We supply a class
@@ -155,8 +151,24 @@ placed in:
 \begin{quote}
 \begin{verbatim}
 df = datafile.datafile("mydata",
-         parser=mathtree.parser(MathTreeFuncs=MyFuncs))
+         parser=mathtree.parser(
+                    MathTreeFuncs=MyFuncs,
+                    MathTreeVals=datafile.MathTreeValsWithCol))
 df.addcolumn("sum=cumulate(costs)")
 \end{verbatim}
 \end{quote}
 
+The explicit setting of \verb|MathTreeVals| is needed in order to keep
+column variables working. Those variables starting with the dollar
+sign (\verb|$|) are not allowed as within the original mathtree.
+
+\section{Own datafile readers}
+
+The development of other datafile readers should be based on the
+helper class \verb|_datafile| by inheritance. When doing so, the
+methods \verb|getcolumnno|, \verb|getcolumn|, and \verb|addcolumn| are
+immediately available and the cooperation with other parts of \PyX{}
+is assured. All what has to be done, is a call to the inherited
+constructor supplying the title list and a list of data points. A data
+point itself is a list of floats or strings. The number of entries per
+data point and the number of titles provided must fit together.
