--- a/manual/datafile.tex
+++ b/manual/datafile.tex
@@ -159,8 +159,8 @@ df.addcolumn("sum=cumulate(costs)")
 \end{quote}
 
 The explicit setting of \verb|MathTreeVals| is needed in order to keep
-column variables working. Those variables starting with the dollar
-sign (\verb|$|) are not allowed as within the original mathtree.
+column variables working. Variables starting with the dollar symbol
+(\verb|$|) are not allowed within the original mathtree.
 
 \section{Own datafile readers}
 
