--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -23,5 +23,6 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \appendix
 \include{mathtree}
 \include{colorname}
+\include{gradientname}
 \include{pathstyles}
 \end{document}
