removed unused sections
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@501 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/unit.tex
+++ b/manual/unit.tex
@@ -105,10 +105,10 @@ to a such, as described above. You can also specify a tuple, if you
 want to convert multiple lengths at once.
 
 
-\section{Examples}
+%\section{Examples}
 
 
-\subsection{Example 1}
+%\subsection{Example 1}
 
 
 
