--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -180,7 +180,7 @@ The \verb|canvas| module provides a number of subclasses of the class
 \verb|base.PathStyle|, which allow to change the look of the paths
 drawn on the canvas. They are summarized in Appendix~\ref{pathstyles}.
 
-\section{Examples}
+% \section{Examples}
 
 
 
