--- a/manual/path.tex
+++ b/manual/path.tex
@@ -187,7 +187,7 @@ Note that besides the \verb|circle| class all classes are actually
 subclasses of \verb|normpath|.
 
 
-\section{Examples}
+% \section{Examples}
 
 
 
