verb -> texttt within tabularx
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@505 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/path.tex
+++ b/manual/path.tex
@@ -36,18 +36,18 @@ Subclass of \texttt{pathel} & function \\
 \texttt{rlineto(dx, dy)} & appends straight line from current point
 relative by (\texttt{dx}, \texttt{dy})\\
 \texttt{arc(x, y, r, \newline\phantom{arc(}angle1, angle2)} & appends arc segment in
-counterclockwise direction with center (\verb|x|, \verb|y|) and
-radius~\verb|r| from \verb|angle1| to \verb|angle2| (in degrees).\\
+counterclockwise direction with center (\texttt{x}, \texttt{y}) and
+radius~\texttt{r} from \texttt{angle1} to \texttt{angle2} (in degrees).\\
 \texttt{arcn(x, y, r, \newline\phantom{arcn(}angle1, angle2)} & appends arc segment in
-clockwise direction with center (\verb|x|, \verb|y|) and
-radius~\verb|r| from \verb|angle1| to \verb|angle2| (in degrees). \\
-\texttt{arct(x1, y1, x2, y2, r)} & appends arc segment with radius \verb|r|
-which connects between (\verb|x1|, \verb|y1|) and (\verb|x2|,
-\verb|y2|).\\
+clockwise direction with center (\texttt{x}, \texttt{y}) and
+radius~\texttt{r} from \texttt{angle1} to \texttt{angle2} (in degrees). \\
+\texttt{arct(x1, y1, x2, y2, r)} & appends arc segment with radius \texttt{r}
+which connects between (\texttt{x1}, \texttt{y1}) and (\texttt{x2},
+\texttt{y2}).\\
 \texttt{rcurveto(dx1, dy1, \newline\phantom{rcurveto(}dx2, dy2,\newline\phantom{rcurveto(}dx3, dy3)} & appends a B\'ezier curve with
 the control points current point, and the points defined relative to
-the current point by (\verb|dx1|, \verb|dy1|), 
-(\verb|dx2|, \verb|dy2|), and (\verb|dx3|, \verb|dy3|)
+the current point by (\texttt{dx1}, \texttt{dy1}), 
+(\texttt{dx2}, \texttt{dy2}), and (\texttt{dx3}, \texttt{dy3})
 \end{tabularx}
 \medskip
 
