--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -24,7 +24,7 @@ We start by constructing the main \verb|canvas| instance, which we
 shall by convention always name \verb|c|.
 \begin{quote}
 \begin{verbatim}
-import pyx
+from pyx import *
 
 c = canvas.canvas()
 \end{verbatim}
